--- a/MoviePicker/MainWindow.xaml
+++ b/MoviePicker/MainWindow.xaml
@@ -132,11 +132,6 @@
                         BorderThickness="1" BorderBrush="Black"
                              IsReadOnly="True">
                     </TextBox>
-
-                    <CheckBox Name="T1CheckBox" Content="CheckBox"
-                        Grid.Column="10" Grid.ColumnSpan="3"
-                        Grid.Row="1" Grid.RowSpan="1">
-                    </CheckBox>
                     
                 </Grid>                
             </TabItem>
@@ -187,14 +182,83 @@
                         <RowDefinition/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
+                    
+                    <Label Name="T2SearchWordLabel" Content="Input search word"
+                           Grid.Column="1" Grid.ColumnSpan="5"
+                           Grid.Row="1" Grid.RowSpan="1"
+                           Padding="0">
+                    </Label>
 
-                    <Label Name="T2AllMoviesLabel" Content="Movie list:"
+                    <TextBox Name="T2SearchWordTextBox" Text=""
+                        Grid.Column="1" Grid.ColumnSpan="13"
+                        Grid.Row="2" Grid.RowSpan="1"
+                        BorderThickness="1" BorderBrush="Black">
+                    </TextBox>
+                    
+                    <CheckBox Name="T2SearchGenreCheckBox" Content="Genre"
+                        Grid.Column="1" Grid.ColumnSpan="2"
+                        Grid.Row="3" Grid.RowSpan="1"
+                              Checked="T2SearchGenreCheckBox_Checked">
+                    </CheckBox>
+
+                    <CheckBox Name="T2SearchTitleCheckBox" Content="Title"
+                        Grid.Column="4" Grid.ColumnSpan="2"
+                        Grid.Row="3" Grid.RowSpan="1"
+                              Checked="T2SearchTitleCheckBox_Checked">
+                    </CheckBox>
+
+                    <CheckBox Name="T2SearchYearCheckBox" Content="Year"
+                        Grid.Column="7" Grid.ColumnSpan="2"
+                        Grid.Row="3" Grid.RowSpan="1"
+                              Checked="T2SearchYearCheckBox_Checked">
+                    </CheckBox>
+
+                    <CheckBox Name="T2SearchDescriptionCheckBox" Content="Description"
+                        Grid.Column="10" Grid.ColumnSpan="4"
+                        Grid.Row="3" Grid.RowSpan="1"
+                              Checked="T2SearchDescriptionCheckBox_Checked">
+                    </CheckBox>
+
+                    <CheckBox Name="T2SearchActorCheckBox" Content="Actor"
+                        Grid.Column="3" Grid.ColumnSpan="2"
+                        Grid.Row="4" Grid.RowSpan="1"
+                              Checked="T2SearchActorCheckBox_Checked">
+                    </CheckBox>
+
+                    <CheckBox Name="T2SearchWriterCheckBox" Content="Writer"
+                        Grid.Column="6" Grid.ColumnSpan="2"
+                        Grid.Row="4" Grid.RowSpan="1"
+                              Checked="T2SearchWriterCheckBox_Checked">
+                    </CheckBox>
+                    
+                    <CheckBox Name="T2SearcDirectorCheckBox" Content="Director"
+                        Grid.Column="9" Grid.ColumnSpan="3"
+                        Grid.Row="4" Grid.RowSpan="1"
+                              Checked="T2SearcDirectorCheckBox_Checked">
+                    </CheckBox>
+
+                    <Button Name="T2SearchMovieButton" Content="Search for movies"
+                        Grid.Column="8" Grid.ColumnSpan="5"
+                        Grid.Row="6" Grid.RowSpan="1">
+                    </Button>
+                    
+                    <Button Name="T2ShowAllMoviesButton" Content="Show all movies"
+                        Grid.Column="8" Grid.ColumnSpan="5"
+                        Grid.Row="8" Grid.RowSpan="1">
+                    </Button>
+
+                    <Button Name="T2EditSelectedMovieButton" Content="Edit selected movie"
+                        Grid.Column="8" Grid.ColumnSpan="5"
+                        Grid.Row="9" Grid.RowSpan="1">
+                    </Button>
+
+                    <Label Name="T2MoviesLabel" Content="Movie list:"
                            Grid.Column="1" Grid.ColumnSpan="5"
                            Grid.Row="9" Grid.RowSpan="1"
                            Padding="0">
                     </Label>
 
-                    <ListBox Name="T2AllMoviesListBox"
+                    <ListBox Name="T2MoviesListBox"
                              Grid.Column="1" Grid.ColumnSpan="13"
                              Grid.Row="10" Grid.RowSpan="13"
                              BorderThickness="1" BorderBrush="Black"
