--- a/MoviePicker/MainWindow.xaml
+++ b/MoviePicker/MainWindow.xaml
@@ -10,9 +10,9 @@
     <Grid>
         <!-- TABS -->
         <TabControl>
-            <TabItem Header="Pick Movie" Width="95">                
+            <TabItem Header="Pick Movie" Width="95">
                 <Grid Background="AliceBlue">
-                    
+
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                         <ColumnDefinition/>
@@ -60,7 +60,7 @@
                     <Label Name="T1SearchPersonLabel" Content="Input name of a person"
                            Grid.Column="1" Grid.ColumnSpan="5"
                            Grid.Row="1" Grid.RowSpan="1"
-                           Padding="0">                        
+                           Padding="0">
                     </Label>
 
                     <TextBox Name="T1SearchPersonTextBox" Text=""
@@ -72,13 +72,13 @@
                     <Label Name="T1GenreSelectorLabel" Content="Select genre"
                            Grid.Column="1" Grid.ColumnSpan="4"
                            Grid.Row="4" Grid.RowSpan="1"
-                           Padding="0,0,0,0">                        
+                           Padding="0,0,0,0">
                     </Label>
 
                     <StackPanel Name="T1GenreSelectorStackPanel"
                         Grid.Column="1" Grid.ColumnSpan="6"
                         Grid.Row="5" Grid.RowSpan="1">
-                        <ComboBox Name="T1SelectedGenreComboBox"  ItemsSource="{Binding T1GenreComboBoxItems}" SelectedItem="{Binding T1SelectedComboBoxItem}"
+                        <ComboBox Name="T1SelectedGenreComboBox"  ItemsSource="{Binding GenreComboBoxItems}" SelectedItem="{Binding T1SelectedComboBoxItem}"
                                   DropDownClosed="T1SelectedGenreComboBox_DropDownClosed"/>
                     </StackPanel>
 
@@ -93,18 +93,16 @@
                         Grid.Column="9" Grid.ColumnSpan="5"
                         Grid.Row="3" Grid.RowSpan="1">
                     </Button>
-                    
+
                     <Button Name="T1ImagePlaceHolderButton" Content="Image placeholder"
                         Grid.Column="8" Grid.ColumnSpan="6"
                         Grid.Row="5" Grid.RowSpan="10">
                     </Button>
 
-
                     <Button Name="T1PeopleInvolvedButton" Content="People involved"
                         Grid.Column="1" Grid.ColumnSpan="6"
                         Grid.Row="14" Grid.RowSpan="1">
                     </Button>
-
 
                     <Label Name="T1MovieTitleLabel" Content="Movie title:"
                            Grid.Column="1" Grid.ColumnSpan="4"
@@ -144,8 +142,8 @@
                         BorderThickness="1" BorderBrush="Black"
                              IsReadOnly="True">
                     </TextBox>
-                    
-                </Grid>                
+
+                </Grid>
             </TabItem>
 
             <TabItem Header="All Movies" Width="95">
@@ -194,7 +192,7 @@
                         <RowDefinition/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
-                    
+
                     <Label Name="T2SearchWordLabel" Content="Input search word"
                            Grid.Column="1" Grid.ColumnSpan="5"
                            Grid.Row="1" Grid.RowSpan="1"
@@ -206,7 +204,7 @@
                         Grid.Row="2" Grid.RowSpan="1"
                         BorderThickness="1" BorderBrush="Black">
                     </TextBox>
-                    
+
                     <CheckBox Name="T2SearchGenreCheckBox" Content="Genre"
                         Grid.Column="1" Grid.ColumnSpan="2"
                         Grid.Row="3" Grid.RowSpan="1"
@@ -242,7 +240,7 @@
                         Grid.Row="4" Grid.RowSpan="1"
                               Checked="T2SearchWriterCheckBox_Checked">
                     </CheckBox>
-                    
+
                     <CheckBox Name="T2SearcDirectorCheckBox" Content="Director"
                         Grid.Column="9" Grid.ColumnSpan="3"
                         Grid.Row="4" Grid.RowSpan="1"
@@ -253,7 +251,7 @@
                         Grid.Column="8" Grid.ColumnSpan="5"
                         Grid.Row="6" Grid.RowSpan="1">
                     </Button>
-                    
+
                     <Button Name="T2ShowAllMoviesButton" Content="Show all movies"
                         Grid.Column="8" Grid.ColumnSpan="5"
                         Grid.Row="8" Grid.RowSpan="1">
@@ -276,28 +274,28 @@
                              BorderThickness="1" BorderBrush="Black"
                              PreviewKeyDown="T1SelectedGenresListBox_PreviewKeyDown">
                     </ListBox>
-                </Grid>                
+                </Grid>
             </TabItem>
 
             <TabItem Header="Add Movie" Width="95">
                 <Grid Background="AliceBlue">
 
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
+                        <ColumnDefinition Width="26*"/>
+                        <ColumnDefinition Width="26*"/>
+                        <ColumnDefinition Width="26*"/>
+                        <ColumnDefinition Width="26*"/>
+                        <ColumnDefinition Width="26*"/>
+                        <ColumnDefinition Width="26*"/>
+                        <ColumnDefinition Width="26*"/>
+                        <ColumnDefinition Width="26*"/>
+                        <ColumnDefinition Width="26*"/>
+                        <ColumnDefinition Width="26*"/>
+                        <ColumnDefinition Width="26*"/>
+                        <ColumnDefinition Width="26*"/>
+                        <ColumnDefinition Width="26*"/>
+                        <ColumnDefinition Width="26*"/>
+                        <ColumnDefinition Width="26*"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition/>
@@ -325,8 +323,90 @@
                         <RowDefinition/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
+
+                    <Label Name="T3MovieTitleLabel" Content="Input movie title"
+                           Grid.Column="1" Grid.ColumnSpan="7"
+                           Grid.Row="1"  Grid.RowSpan="2"
+                           Padding="0"/>
+
+                    <TextBox Name="T3MovieTitleTextBox" Text=""
+                        Grid.Column="1" Grid.ColumnSpan="8"
+                        Grid.Row="2" Grid.RowSpan="1"
+                        BorderThickness="1" BorderBrush="Black">
+                    </TextBox>
                     
+                    <Label Name="T3MovieYearLabel" Content="Input movie year"
+                           Grid.Column="10" Grid.ColumnSpan="4" 
+                           Grid.Row="1" Grid.RowSpan="2"
+                           Padding="0"/>
+
+                    <TextBox Name="T3MovieYearTextBox" Text=""
+                        Grid.Column="10" Grid.ColumnSpan="4"
+                        Grid.Row="2" Grid.RowSpan="1"
+                        BorderThickness="1" BorderBrush="Black">
+                    </TextBox>
                     
+                    <Label Name="T3MovieDescriptionLabel" Content="Description:"
+                           Grid.Column="1" Grid.ColumnSpan="4"
+                           Grid.Row="3" Grid.RowSpan="1"
+                           Padding="0,0,0,0">
+                    </Label>
+
+                    <TextBox Name="T3MovieDescriptionTextBox" Text=""
+                        Grid.Column="1" Grid.ColumnSpan="13"
+                        Grid.Row="4" Grid.RowSpan="4"
+                        BorderThickness="1" BorderBrush="Black">
+                    </TextBox>
+
+                    <Label Name="T3GenreSelectorLabel" Content="Add genre(s)"
+                           Grid.Column="1" Grid.ColumnSpan="4"
+                           Grid.Row="9" Grid.RowSpan="1"
+                           Padding="0,0,0,0">
+                    </Label>
+
+                    <StackPanel Name="T3GenreSelectorStackPanel"
+                        Grid.Column="1" Grid.ColumnSpan="6"
+                        Grid.Row="10" Grid.RowSpan="1">
+                        <ComboBox Name="T3SelectedGenreComboBox"  ItemsSource="{Binding GenreComboBoxItems}" SelectedItem="{Binding T3SelectedComboBoxItem}"
+                                  DropDownClosed="T3SelectedGenreComboBox_DropDownClosed"/>
+                    </StackPanel>
+
+                    <ListBox Name="T3SelectedGenresListBox"
+                             Grid.Column="1" Grid.ColumnSpan="6"
+                             Grid.Row="12" Grid.RowSpan="6"
+                             BorderThickness="1" BorderBrush="Black"
+                             PreviewKeyDown="T3SelectedGenresListBox_PreviewKeyDown">
+                    </ListBox>
+
+                    <Label Name="T3PeopleSelectorLabel" Content="Add people"
+                           Grid.Column="8" Grid.ColumnSpan="4"
+                           Grid.Row="9" Grid.RowSpan="1"
+                           Padding="0,0,0,0">
+                    </Label>
+
+                    <StackPanel Name="T3PepleSelectorStackPanel"
+                        Grid.Column="8" Grid.ColumnSpan="6"
+                        Grid.Row="10" Grid.RowSpan="1">
+                        <ComboBox Name="T3SelectedPeopleComboBox"  ItemsSource="{Binding PeopleComboBoxItems}" SelectedItem="{Binding T3SelectedComboBoxItem}"
+                                  DropDownClosed="T3SelectedPeopleComboBox_DropDownClosed"/>
+                    </StackPanel>
+
+                    <ListBox Name="T3SelectedPeopleListBox"
+                             Grid.Column="8" Grid.ColumnSpan="6"
+                             Grid.Row="12" Grid.RowSpan="6"
+                             BorderThickness="1" BorderBrush="Black"
+                             PreviewKeyDown="T3SelectedPeopleListBox_PreviewKeyDown">
+                    </ListBox>
+                    
+                    <Button Name="T3AddImage" Content="Add Image"
+                        Grid.Column="1" Grid.ColumnSpan="6"
+                        Grid.Row="19" Grid.RowSpan="1">
+                    </Button>
+
+                    <Button Name="T3AddMovie" Content="Add movie to list"
+                        Grid.Column="4" Grid.ColumnSpan="7"
+                        Grid.Row="21" Grid.RowSpan="2">
+                    </Button>
 
                 </Grid>
             </TabItem>
@@ -377,6 +457,23 @@
                         <RowDefinition/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
+
+                    <Label Name="T4SearchPersonLabel" Content="Input name of a person"
+                           Grid.Column="1" Grid.ColumnSpan="5"
+                           Grid.Row="1" Grid.RowSpan="1"
+                           Padding="0">
+                    </Label>
+
+                    <TextBox Name="T4SearchPersonTextBox" Text=""
+                        Grid.Column="1" Grid.ColumnSpan="8"
+                        Grid.Row="2" Grid.RowSpan="1"
+                        BorderThickness="1" BorderBrush="Black">
+                    </TextBox>
+
+                    <Button Name="T4PeopleInvolvedButton" Content="People involved"
+                        Grid.Column="1" Grid.ColumnSpan="6"
+                        Grid.Row="14" Grid.RowSpan="1">
+                    </Button>
 
                 </Grid>
             </TabItem>
