--- a/MoviePicker/MainWindow.xaml
+++ b/MoviePicker/MainWindow.xaml
@@ -494,7 +494,8 @@
 
                     <Button Name="T4AddPerson" Content="Add person"
                         Grid.Column="4" Grid.ColumnSpan="7"
-                        Grid.Row="8" Grid.RowSpan="1">
+                        Grid.Row="8" Grid.RowSpan="1"
+                            Click="T4AddPerson_Click">
                     </Button>
 
                 </Grid>
